<resources>
    <string name="app_name" translatable="false">Car Medic</string>
    <string name="token_error">Invalid login</string>
    <string name="unknown_error">Unknown error</string>
    <string name="invalid_pref_type_error">Invalid type for preferences</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="invalid_password">Invalid password</string>
    <string name="register">Register</string>
    <string name="register_modal">Would you like to register as a user or a car repair shop?</string>
    <string name="user">User</string>
    <string name="repair_shop">Car Repair Shop</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="required_value">Required value</string>
    <string name="user_registration">User Registration</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="length_between_1_50">Length must be between 1 and 50</string>
    <string name="username">Username</string>
    <string name="length_between_5_50">Length must be between 5 and 50</string>
    <string name="login_credential">Username or e-mail</string>
    <string name="shop_registration">Repair Shop Registration</string>
    <string name="vat_id">VAT</string>
    <string name="location">Location</string>
    <string name="search_address">Search Address</string>
    <string name="short_name">Short Name</string>
    <string name="legal_name">Legal Name</string>
    <string name="set_location">Set Location</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="length_between_1_200">Length must be between 1 and 200</string>
    <string name="length_between_1_2000">Length must be between 1 and 2000</string>
    <string name="location_required">Location is required</string>
    <string name="remember_me">Remember me</string>
    <string name="login_as_shop">Login as car repair shop</string>
    <string name="already_logged_in">Already logged in</string>
    <string name="car_service_in_next_30_days">Car service in next 30 days</string>
    <string name="description">Description</string>
    <string name="repair_shop_name">Repair shop name</string>
    <string name="repair_shop_vat">Repair Shop VAT</string>
    <string name="request_description">Request Description</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="long_lorem" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="no_requests">You have no car repair requests in next 30 days</string>
    <string name="to_find_mechanic_shop_in_your_vicinity_go_to_search">To find mechanic shop in your vicinity, go to Search</string>
    <string name="date_of_next_service">Date</string>
    <string name="date_of_repair">Date of Repair</string>
    <string name="time_of_repair">Time of Repair</string>
    <string name="details">Details</string>
    <string name="estimated_time">Estimated time</string>
    <string name="estimated_price">Estimated Price</string>
    <string name="search_location">Search Location</string>
    <string name="home">Home</string>
    <string name="find_service">Find Service</string>
    <string name="requests">Requests</string>
    <string name="settings">Settings</string>
    <string name="my_location">My location</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="pick_wanted_date_of_repair">Pick Wanted Date Of Repair</string>
    <string name="select_repair_date">Select Repair Date</string>
    <string name="create_new_service_request">Create New Service Request</string>
    <string name="map">Map</string>
    <string name="proceed_with_selected_location">Proceed with selected location</string>
    <string name="calendar">Calendar</string>
    <string name="vehicle">Vehicle</string>
    <string name="new_vehicle_btn">New</string>
    <string name="describe_the_issue">Describe the Issue</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="add_new_car">Add New Vehicle</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="odometer">Odometer</string>
    <string name="value_between_1960_today">Value must be between 1960 and this year</string>
    <string name="vehicle_created_successfuly">Vehicle created successfully</string>
    <string name="request_submitted">Request Submitted</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="user_accepted">User Accepted</string>
    <string name="shop_accepted">Shop Accepted</string>
    <string name="completed">Completed</string>
    <string name="menu">menu</string>
    <string name="consents">Consents</string>
    <string name="actual_date_of_finish">Actual Date of Finish</string>
    <string name="actual_price">Actual Price</string>
    <string name="personal_info">Personal Information</string>
    <string name="account_info">Account Information</string>
    <string name="reset_password">Reset Password</string>
    <string name="vehicles">Vehicles</string>
    <string name="content_toggle">content toggle</string>
    <string name="system">System</string>
    <string name="logout">Log out</string>
    <string name="edit_row">Edit row</string>
    <string name="vehicle_deleted_successfuly">Vehicle Deleted Successfully</string>
    <string name="vehicle_edited_successfuly">Vehicle Edited Successfully</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="current_repair">Current Repair</string>
    <string name="repair_requests">Repair Requests</string>
    <string name="redirect_to_request">Redirect to request</string>
    <string name="deadline">Deadline</string>
    <string name="upcoming_repair">Upcoming Repair</string>
    <string name="start_date_time"><![CDATA[Start Date & Time]]></string>
    <string name="reviews">Reviews</string>
    <string name="latest_reviews">Latest Reviews</string>
    <string name="notifications">Notifications</string>
    <string name="new_requests">New requests</string>
    <string name="updated_requests">Updated Requests</string>
    <string name="search">Search</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="image_representation_of_user_consent" translatable="false">Image representation of user consent</string>
    <string name="image_representation_of_shop_consent" translatable="false">Image Representation Of Shop Consent</string>
    <string name="work_hours_estimate">Work Hours Estimate</string>
    <string name="issue_description">Issue Description</string>
    <string name="incorrectFormat">Incorrect Format</string>
    <string name="value_between_1_999">Value must be between 1 and 999</string>
    <string name="no_updated_requests">No Updated Requests</string>
    <string name="no_new_requests">No New Requests</string>
    <string name="internet_connection_error">Unable to establish connection with the server</string>
    <string name="repair_view">Repair View</string>
    <string name="repair_shop_info">Repair Shop Information</string>
    <string name="repair_shop_settings">Repair Shop Settings</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="work_days">Work Days</string>
    <string name="work_hours">Work Hours</string>
    <string name="car_capacity">Car Capacity</string>
    <string name="login_as">Login as</string>
    <string name="monday_letter">M</string>
    <string name="tuesday_letter">T</string>
    <string name="wednesday_letter">W</string>
    <string name="thursday_letter">T</string>
    <string name="friday_letter">F</string>
    <string name="saturday_letter">S</string>
    <string name="sunday_letter">S</string>
    <string name="licensePlate">License Plate</string>
    <string name="test" translatable="false">Test String</string>
    <string name="submit">Submit</string>
    <string name="review_latest_repair">Review Latest Repair</string>
    <string name="rating">Rating</string>
    <string name="comment">Comment</string>
    <string name="review_submitted">Review Submitted</string>
    <string name="issues">Issues</string>
    <string name="new_issue">New Issue</string>
    <string name="price">Price</string>
    <string name="save_changes">Save changes</string>
    <string name="issue_save_text">Are you sure? When user approves, you cannot change this. Do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_issues">Some issues are invalid. Please fix before continuing</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="deleted">Deleted</string>
    <string name="waiting_response">Waiting Response</string>
</resources>