<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="30sp"
    style="@style/modal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_modal"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="40sp"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/btnUserRegister"
        style="@style/primaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/user" />

    <Button
        android:id="@+id/btnShopRegister"
        style="@style/primaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/repair_shop" />
</LinearLayout>