<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:weightSum="10">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:padding="3sp"
                android:text="@string/date"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:padding="3sp"
                android:text="@string/name"
                android:textSize="11sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="3sp"
                android:text="@string/user_accepted"

                android:textSize="11sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="3sp"
                android:text="@string/shop_accepted"

                android:textSize="11sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="3sp"
                android:text="@string/completed"
                android:textSize="11sp" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/vScroll"
            style="@style/home"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRequests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/request_list_item" />

            </LinearLayout>
        </ScrollView>

        <include layout="@layout/user_bottom_navigation" />

    </LinearLayout>

    <include layout="@layout/loading_layout" />
</RelativeLayout>
