<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/row_item_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5sp"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="68sp"
            android:layout_margin="5sp"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/etPrice"
                android:text="@string/price" />

            <EditText
                android:id="@+id/etPrice"
                style="@style/textField"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:importantForAutofill="no"
                android:inputType="text" />

        </LinearLayout>

        <Button
            style="@style/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btnAcceptIssue"
            android:layout_margin="5sp"
            android:layout_weight="2.5"
            android:text="@string/accept" />

        <Button
            style="@style/danger_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btnDeclineIssue"
            android:layout_margin="5sp"
            android:layout_weight="2.5"
            android:text="@string/decline" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5sp"
        android:orientation="vertical">

        <TextView
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/etDescription"
            android:text="@string/description" />

        <EditText
            android:id="@+id/etDescription"
            style="@style/bigTextField"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:importantForAutofill="no"
            android:inputType="text" />

    </LinearLayout>


</LinearLayout>