<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/row_item_style"
    android:layout_width="match_parent"
    android:layout_height="90sp"
    android:layout_margin="5sp"
    android:orientation="horizontal"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/row_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manufacturer" />

            <TextView
                android:id="@+id/tvManufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Megane III" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/row_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/model" />

            <TextView
                android:id="@+id/tvModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Megane III" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/row_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year" />

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="2009" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                style="@style/row_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/odometer" />

            <TextView
                android:id="@+id/tvOdometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="171000" />
        </LinearLayout>


    </LinearLayout>


    <ImageButton
        android:id="@+id/btnEdit"
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/text_dark_100"
        android:contentDescription="@string/menu"
        android:src="@drawable/pen_to_square_small_primary"
        tools:src="@drawable/pen_to_square_small_primary" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/text_dark_100"
        android:contentDescription="@string/menu"
        android:src="@drawable/trash_solid"
        tools:src="@drawable/trash_solid" />

</LinearLayout>